syntax = "proto3";

service MessengerService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc GetLastMessages(GetLastMessagesRequest) returns (ServerResponse);
  rpc SendMessage(MessageRequest) returns (ServerResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message GetLastMessagesRequest {
	string access_token = 1;
	int32 chat_id = 2;
}

message Message {
	int64 unix_time = 1;
	string text = 2;
	string author_name = 3;
	string author_surname = 4;
	string author_image = 5;
}

message MessageRequest {
	string access_token = 1;
	Message message = 2;
}

message MessageList {
	int32 chat_id = 1;
	repeated Message messages = 2;
}

message Empty {

}

message Error {
	string error_message = 1;
}

message ServerResponse {
	oneof response_case {
		Error error_message = 1;
		MessageList message_list = 2;
		Empty empty = 3;
	}
}